# rp64-configs

./: .gitignore  README.md  pyproject.toml
cockpit/: cockpit.conf
openresty/: docker-compose.yml
openresty/conf.d/: api.conf  cockpit.conf  default.conf  linkedin.conf  wiki.conf  zube.conf
wikijs/: docker-compose.yml  env-file
