[tool.poetry]
name = "rp64-configs"
version = "0.1.0"
description = "Configuration Files for my RockPro64"
authors = ["Md Zubair Beg <ziibii88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
